some alignments fixed

--- a/style.css
+++ b/style.css
@@ -20,30 +20,26 @@ body {
   background-color: var(--darker);
   align-items: center;
   justify-content: space-between;
-  flex-direction: row-reverse;
   padding: 0px 20px;
-  /* flex-wrap: wrap; */
-  position: relative;
 }
-
 .logo {
-  width: fit-content;
-  /* padding: 0px 0px 0px 10px; */
+  display: flex;
+  padding-right: 20px;
 }
 .logo > img {
   width: 130px;
   transition: width 0.2s linear;
 }
+.tools {
+  display: flex;
+  border: 2px solid var(--retro-green);
+  position: relative;
+}
 .search_box {
   display: flex;
   width: 50px;
   height: 50px;
-  border: 2px solid var(--retro-green);
-  border-right: none;
-  /* border-radius: 50px; */
   transition: width 0.2s linear;
-  position: absolute;
-  right: 70px;
 }
 .button {
   height: inherit;
@@ -73,11 +69,8 @@ body {
 .hide {
   display: none;
 }
-
 .menu > .button {
   height: 50px;
-  border: 2px solid var(--retro-green);
-  border-left: none;
   background-image: url(menu.svg);
   border-radius: 0px;
 }
@@ -88,10 +81,12 @@ body {
   opacity: 0;
   transition: opacity 0.1s linear;
   position: absolute;
-  right: 20px;
-  top: 75px;
+  right: -1.6px;
+  top: 52px;
   border: 2px solid var(--retro-green);
   border-left: none;
+  border-top: none;
+  width: max-content;
 }
 .menu > ul > li {
   background-color: var(--dark);
